22/02/07 Julien Dutheil
* Distance estimation now works properly with
MarkovModulatedSubstitutionModel.

17/02/07 Julien Dutheil
* New (string,string) operator in DistanceMatrix.
* New methods getState in SubstitutionModel and getRate in MarkovModulatedSubstitutionModel.
* Simulations now work correctly with a MarkovModulatedSubstitutionModel.
* SubstitutionModel are now clonable.
* PhylogeneticsApplicationTools: now one may chose to not re-estimate branch
lengths.

05/02/07 Bastien Boussau & Julien Dutheil
* Node properties are now splitted into NodeProperties and BranchProperties.
  Bootstrap values belong to the last category, and are now properly updated
	when rerooting a tree.

28/01/07 -*- Version 1.3.1 -*-

27/01/07 Julien Dutheil
* Change getTree method in NNISearchable interface to getTopology, and
getValue to getTopologyValue.
  This solve a bug in DRHomogeneousTreeLikelihood and avoid confusion with
	TreeLikelihood::getTree method, although both methods are identical.
* No more dynamic_cast in NNITopologySearch + bug solved in methods FAST and BETTER.
* Remove non required virtual inheritence to solve linker errors.

19/01/07 -*- Version 1.3 -*-

19/01/07 Julien Dutheil
* Removed duplicated functions in HomogeneousTreeLikelihood.
* Code update

10/01/07 Julien Dutheil
* Parsimony classes updated to match the new NNISearchable implementation.

03/01/07 Julien Dutheil
* --enable-virtual-cov option in configure script is now set by default.
* The Tree interface inherits from Clonable.
* TreeLikelihood and TreeParsimonyScore now implement the Clonable interface.
* Use node ids instead of node pointers in all Data structure (likelihood and
		parsimony).
* NNISearchable interface rewritten, now use nodes id instead of pointers.
  It now also inherits from Clonable and a new method getValue() was added.
* PhyML option in NNITopologySearch now properly implemented (check if
		multiple NNI really improve score).